<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VSLauncher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_app_title">Add app</string>
    <string name="home_d_kodi">KODI</string>
    <string name="home_d_local">EXPLORER</string>
    <string name="home_d_apps">APPS</string>
    <string name="home_d_set">SETTINGS</string>
    <string name="home_d_web">WEB</string>
    <string name="home_apps">APPS</string>
    <string name="item_menu_type">Clean data</string>
    <string name="item_menu_uninstall">Uninstall</string>
    <string name="item_menu_app_selected">*Click to enter the application info</string>
    <string name="item_menu_type_selected">*Click to clear application data</string>
    <string name="item_menu_uninstall_selected">*Click to uninsall</string>
    <string name="item_menu_boot_true">Set boot</string>
    <string name="item_menu_boot_false">Cancel set boot</string>
    <string name="item_menu_boot_true_selected">*Click to set boot</string>
    <string name="item_menu_boot_false_selected">*Click to Cancel set boot</string>
    <string name="app_app_menu_hint">Press Menu Management APP</string>
    <string name="add_null_hint">No application can be added</string>
    <string name="all_app_title">APPS</string>
    <string name="shenzhen">ShenZhen</string>
    <string name="china">China</string>
    <string name="temperature">22~23℃</string>
    <string name="time">08:06</string>
</resources>
