<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_bg"
    android:id="@+id/home_main_layout"
    tools:context="com.vs.vslauncher.MainActivity" >

    <RelativeLayout
        android:id="@+id/home_ac_home_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="276dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/home_ac_weather_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="160dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/home_ac_weather_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginStart="5dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical"
                    android:paddingTop="20dp"
                    android:text="@string/time"
                    android:textColor="#ff000000"
                    android:textSize="110.0sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="302dp"
            android:gravity="center" >

            <!--
                 HorizontalScrollView
                android:id="@+id/hs_sv"
                android:layout_width="fill_parent"
                android:layout_height="170.0dp"
                android:layout_marginLeft="120.0dip"
                android:layout_marginRight="120.0dip"
                android:layout_marginTop="90.0dip"
                android:scrollbars="none"

            -->

            <LinearLayout
                android:id="@+id/home_ac_re_app_li"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <GridView
                    android:id="@+id/listHoView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:listSelector="@drawable/item_grid_item_selector"
                    android:nextFocusDown="@+id/home_ac_kodi"
                    android:numColumns="auto_fit"
                    android:smoothScrollbar="true"
                    android:stretchMode="spacingWidthUniform" >
                </GridView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:visibility="invisible" >

                    <ImageView
                        android:id="@+id/image_add"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:onClick="onButtonClick"
                        android:src="@drawable/user_app_add" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_app_title"
                        android:textSize="23sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- /HorizontalScrollView -->
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25.0dip"
            android:layout_marginRight="50.0dip" >

            <ImageView
                android:id="@+id/status_wifi"
                android:layout_width="29.0dip"
                android:layout_height="28.0dip"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/status_usb"
                android:layout_width="29.0dip"
                android:layout_height="28.0dip"
                android:layout_marginLeft="7.0dip"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/status_net"
                android:layout_width="29.0dip"
                android:layout_height="28.0dip"
                android:layout_marginLeft="7.0dip"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/status_sdcard"
                android:layout_width="29.0dip"
                android:layout_height="28.0dip"
                android:layout_marginLeft="7.0dip"                
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_ac_re_app_li_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="380dp"
            android:orientation="horizontal" >            

            <GridView
                android:id="@+id/gridView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:nextFocusUp="@+id/listHoView"
                android:listSelector="@drawable/item_grid_item_selector"
                android:numColumns="auto_fit"
                android:stretchMode="spacingWidthUniform" >
            </GridView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.0dip"
                            android:gravity="center"
                            android:text="@string/home_d_kodi"
                            android:textColor="#ff000000"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="78.0dip"
                            android:layout_marginTop="10.0dip"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_icon_kodi_d" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="123.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56.0dip"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.0dip"
                            android:gravity="center"
                            android:text="@string/home_d_local"
                            android:textColor="#ff000000"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="78.0dip"
                            android:layout_marginTop="10.0dip"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_icon_local_d" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="123.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56.0dip"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.0dip"
                            android:gravity="center"
                            android:text="@string/home_d_apps"
                            android:textColor="#ff000000"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="78.0dip"
                            android:layout_marginTop="10.0dip"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_icon_apps_d" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="123.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56.0dip"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.0dip"
                            android:gravity="center"
                            android:text="@string/home_d_set"
                            android:textColor="#ff000000"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="78.0dip"
                            android:layout_marginTop="10.0dip"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_icon_set_d" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="123.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56.0dip"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.0dip"
                            android:gravity="center"
                            android:text="@string/home_d_web"
                            android:textColor="#ff000000"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="78.0dip"
                            android:layout_marginTop="10.0dip"
                            android:scaleType="fitXY"
                            android:src="@drawable/home_icon_web_d" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>